[chore]:admin can add bus for trip
